<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingRight="18dp"
    android:animateLayoutChanges="true"
    android:focusableInTouchMode="true"
    android:paddingLeft="18dp"
    android:background="@drawable/tricolors"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:id="@+id/logo"
        android:src="@mipmap/swachhbharat"
        android:background="@android:color/transparent"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:contentDescription="@string/image"
        />
    <RelativeLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/linear_layout1"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingBottom="25dp"
        android:id="@+id/relative_layout_1"
        >
        <EditText
            android:textColor="@color/blue"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/hint_login"
            android:inputType="textEmailAddress"
            android:ems="15"
            android:id="@+id/login_email"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:padding="10dp"
            tools:ignore="RtlHardcoded" />
        <View
            android:layout_below="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue"
            android:id="@+id/view1"
            />
        <EditText
            android:textColor="@color/blue"
            android:layout_below="@+id/view1"
            android:textSize="@dimen/text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:maxLength="40"
            android:textColorHint="@color/hint_login"
            android:inputType="textPassword"
            android:id="@+id/login_password"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            tools:ignore="RtlHardcoded" />
        <View
            android:layout_below="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue"
            />
    </RelativeLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:id="@+id/linear_layout1"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="vertical"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white"
            android:clickable="true"
            android:id="@+id/login_button"
            android:text="@string/log_in"
            android:onClick="logIn"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/orange"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_register"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:textColor="@color/orange"
            android:id="@+id/notregistertext"
            android:textStyle="bold"
            />
        <Button
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white"
            android:clickable="true"
            android:id="@+id/sign_up_button"
            android:text="@string/register"
            android:textSize="20sp"
            android:onClick="signUp"
            android:textAllCaps="false"
            android:textColor="@color/orange"
            />

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:clickable="true"
            android:onClick="forgetPassword"
            android:textColor="@color/orange"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:id="@+id/forget_passsword"
            android:textStyle="bold"
            />
    </LinearLayout>

</RelativeLayout>



