<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/tricolors"
    tools:context="swachbharatabhiyan.swachbharatabhiyan.SignUpActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:paddingLeft="10dp"
            android:clickable="false"
            android:paddingRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_now"
            android:background="@android:color/transparent"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            />
    </RelativeLayout>

<LinearLayout
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/white">

    <EditText
            android:textColor="@color/blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/sign_up_email"
            android:textColorHint="@color/hint_login"
            android:maxLines="2"
            android:inputType="textEmailAddress"
            android:ems="20"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:padding="10dp"
            tools:ignore="RtlHardcoded" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Create Passowrd"
            android:textColor="@color/blue"
            android:textColorHint="@color/hint_login"
            android:maxLines="2"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/signup_password"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            tools:ignore="RtlHardcoded" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue"
            />

        <Button

            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue"
            android:clickable="true"
            android:layout_marginTop="10dp"
            android:id="@+id/login_button"
            android:layout_marginLeft="50dp"
            android:text="@string/register"
            android:onClick="register"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/loginbackground"
            android:layout_marginRight="50dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/image"
        android:src="@mipmap/cleaning_icon_stripping"
        android:contentDescription="@string/image"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"/>
    </RelativeLayout>
</RelativeLayout>
